samples/_failures_safe/1761195734_239434_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b02e4e5d.c: In function ‘print_entries_by_level’:
./samples/SAFE/__tmp_b02e4e5d.c:139:12: error: missing terminating " character
  139 |     printf("
      |            ^
./samples/SAFE/__tmp_b02e4e5d.c:139:5: error: expected expression at end of input
  139 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_b02e4e5d.c:139:5: error: expected declaration or statement at end of input
